refactor: change keys id and loop interval

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "time-in-vscode.helloWorld",
-        "title": "Hello World"
+        "command": "time-in-vscode.view",
+        "title": "See how many time you spent in VSCode"
       }
     ]
   },
