build: add an simple icon

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "displayName": "Time in VSCode",
   "description": "An extension that logs the time you spend with vscode open",
   "version": "1.0.0",
+  "publisher": "eduardoodelonw",
+  "icon": "./icon.png",
   "engines": {
     "vscode": "^1.84.0"
   },
